# ccli

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
ccli/: cli.py
ccli/commands/: __init__.py
ccli/commands/tree/: cli.py  main.py
tests/: test_ccli.py  test_cli.py
tests/commands/tree/: conftest.py  test_cli.py  test_main.py
