[tool.poetry]
name = "ccli"
version = "0.1.5"
description = "Custom Command Line Interface"
authors = ["Robert McKay"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
termcolor = "^2.4.0"

[tool.poetry.scripts]
ccli = "ccli.cli:CLI"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
mypy = "^1.10.0"
tomlkit = "^0.12.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
